# aw-watcher-lid

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
aw_watcher_lid/: __init__.py  __main__.py  boot_detector.py  config.py  dbus_listener.py  journal_listener.py  lid.py
misc/: aw-watcher-lid.service
tests/: test_boot_detector.py  test_lid_watcher.py
