[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aw-watcher-lid"
version = "0.1.0"
description = "ActivityWatch watcher for laptop lid events and system suspend/resume"
authors = ["Tobias Brox <tobias@redpill-linpro.com>"]
license = "MPL-2.0"
readme = "README.md"
packages = [{include = "aw_watcher_lid"}]

[tool.poetry.dependencies]
python = "^3.13"
aw-client = "^0.5.13"
dbus-python = {version = "^1.3.2", optional = true}
PyGObject = {version = "^3.42.0", optional = true}

[tool.poetry.extras]
dbus = ["dbus-python", "PyGObject"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
mypy = "^1.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
aw-watcher-lid = "aw_watcher_lid.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
